--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "push-dir": "^0.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
